--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
 
     </dependencies>
 
