--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.application.name=restaurant-management
-spring.datasource.url=jdbc:postgresql://localhost:5432/nomedobanco
-spring.datasource.username=seuusuario
-spring.datasource.password=suasenha
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active=devMysql
