--- a/src/main/resources/application-devMysql.properties
+++ b/src/main/resources/application-devMysql.properties
@@ -1,11 +1,11 @@
 spring.application.name=restauranteManagement
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/restauranteManagement
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/restauranteManagement?createDatabaseIfNotExists=true
 spring.datasource.username=${DB_USERS}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.drive-classe-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 
