feat: Implementa o bookingController

--- a/src/main/resources/application-devMysql.properties
+++ b/src/main/resources/application-devMysql.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
-
+spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
