--- a/src/main/resources/application-devPostgres.properties
+++ b/src/main/resources/application-devPostgres.properties
@@ -1,7 +1,7 @@
 spring.application.name=restaurant-management
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-management
+spring.datasource.url=jdbc:postgresql://localhost:${PORT_POSTGRES}/restaurant-management
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=${PASSWORD_POSTGRES}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
