--- a/src/main/resources/application-devPostgres.properties
+++ b/src/main/resources/application-devPostgres.properties
@@ -1,6 +1,6 @@
 spring.application.name=restaurant-management
 spring.datasource.url=jdbc:postgresql://localhost:${PORT_POSTGRES}/restaurant-management
-spring.datasource.username=postgres
+spring.datasource.username=${USER_POSTGRES}
 spring.datasource.password=${PASSWORD_POSTGRES}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
