--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,18 @@
-version: '3.7'
+version: '3.8'
 services:
   db:
     image: 'postgres:latest'
     container_name: 'database-container'
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
+      POSTGRES_USER: ${USER_POSTGRES}
+      POSTGRES_PASSWORD: ${PASSWORD_POSTGRES}
       POSTGRES_DB: restaurant-management
-
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD", "pg_isready", "-U", "${USER_POSTGRES}" ]
       interval: 10s
-      timeout: 10s
+      timeout: 5s
       retries: 5
 
   application:
@@ -25,8 +24,8 @@ services:
       db:
         condition: service_healthy
     ports:
-      - 8080:8080
+      - "8080:8080"
     environment:
-      PORT_POSTGRES: 5432
-      USER_POSTGRES: postgres
-      PASSWORD_POSTGRES: 123
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/restaurant-management
+      SPRING_DATASOURCE_USERNAME: ${USER_POSTGRES}
+      SPRING_DATASOURCE_PASSWORD: ${PASSWORD_POSTGRES}
