--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,17 +34,19 @@ jobs:
           echo "PASSWORD_POSTGRES=postgre" >> $GITHUB_ENV
     - name: Criar settings.xml com espelho Sonatype
       run: |
-          mkdir -p ~/.m2
-          echo '<settings>' >> ~/.m2/settings.xml
-          echo '  <mirrors>' >> ~/.m2/settings.xml
-          echo '    <mirror>' >> ~/.m2/settings.xml
-          echo '      <id>sonatype</id>' >> ~/.m2/settings.xml
-          echo '      <mirrorOf>central</mirrorOf>' >> ~/.m2/settings.xml
-          echo '      <url>https://oss.sonatype.org/content/repositories/central/</url>' >> ~/.m2/settings.xml
-          echo '      <blocked>false</blocked>' >> ~/.m2/settings.xml
-          echo '    </mirror>' >> ~/.m2/settings.xml
-          echo '  </mirrors>' >> ~/.m2/settings.xml
-          echo '</settings>' >> ~/.m2/settings.xml
+        mkdir -p ~/.m2
+        echo '<?xml version="1.0" encoding="UTF-8"?>' > ~/.m2/settings.xml
+        echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"' >> ~/.m2/settings.xml
+        echo '          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"' >> ~/.m2/settings.xml
+        echo '          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">' >> ~/.m2/settings.xml
+        echo '  <mirrors>' >> ~/.m2/settings.xml
+        echo '    <mirror>' >> ~/.m2/settings.xml
+        echo '      <id>sonatype</id>' >> ~/.m2/settings.xml
+        echo '      <mirrorOf>central</mirrorOf>' >> ~/.m2/settings.xml
+        echo '      <url>https://oss.sonatype.org/content/repositories/central/</url>' >> ~/.m2/settings.xml
+        echo '    </mirror>' >> ~/.m2/settings.xml
+        echo '  </mirrors>' >> ~/.m2/settings.xml
+        echo '</settings>' >> ~/.m2/settings.xml
     - name: Clean Maven cache
       run: rm -rf ~/.m2/repository
     - name: Build with Maven
