--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,10 @@ jobs:
           echo "PORT_POSTGRES=5432" >> $GITHUB_ENV
           echo "USER_POSTGRES=postgres" >> $GITHUB_ENV
           echo "PASSWORD_POSTGRES=postgre" >> $GITHUB_ENV
+
+    - name: Verificar conteúdo do settings.xml
+      run: cat ~/.m2/settings.xml
+
     - name: Criar settings.xml com espelho Sonatype
       run: |
         mkdir -p ~/.m2
