feat: reconfigura o github action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,21 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: restaurant-management
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgre
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 30s
+          --health-timeout 10s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
