--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--  Performance test-->
+
+        <dependency>
+            <groupId>io.gatling</groupId>
+            <artifactId>gatling-app</artifactId>
+            <version>3.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.gatling.highcharts</groupId>
+            <artifactId>gatling-charts-highcharts</artifactId>
+            <version>3.9.5</version>
+        </dependency>
+
     </dependencies>
 
     <!--Remove lombok-->
@@ -296,6 +309,22 @@
                             </includes>
                             <excludes combine.self="override">
                             </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <!--    Performance test-->
+        <profile>
+            <id>performance-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.gatling</groupId>
+                        <artifactId>gatling-maven-plugin</artifactId>
+                        <version>4.3.7</version>
+                        <configuration>
+                            <simulationClass>com.fiap.restaurant_management.performance.PerformanceSimulation</simulationClass>
                         </configuration>
                     </plugin>
                 </plugins>
