feat: Muda a variável de ambiente do postgresql

--- a/src/main/resources/application-devPostgres.properties
+++ b/src/main/resources/application-devPostgres.properties
@@ -1,5 +1,6 @@
 spring.application.name=restaurant-management
-spring.datasource.url=jdbc:postgresql://localhost:${PORT_POSTGRES}/restaurant-management
+spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.url=jdbc:postgresql://localhost:${PORT_POSTGRES}/restaurant-management
 spring.datasource.username=${USER_POSTGRES}
 spring.datasource.password=${PASSWORD_POSTGRES}
 spring.datasource.driver-class-name=org.postgresql.Driver
