--- a/src/main/resources/application-Prod.properties
+++ b/src/main/resources/application-Prod.properties
@@ -1,8 +1,11 @@
 spring.application.name=restaurant-management
-spring.datasource.url=jdbc:postgresql://junction.proxy.rlwy.net:34629/railway
-spring.datasource.username=postgres
-spring.datasource.password=KlaFISHjxiVrDsSmHAUBxSWdMDsrddxJ
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
