feat: atualiza maven.yml

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,11 +42,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Set up Environment Variables
+
+    - name: Set up Environment
       run: |
-          echo "PORT_POSTGRES=5432" >> $GITHUB_ENV
-          echo "USER_POSTGRES=postgres" >> $GITHUB_ENV
-          echo "PASSWORD_POSTGRES=postgre" >> $GITHUB_ENV
+          echo "JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/restaurant-management" >> $GITHUB_ENV
+          echo "POSTGRES_USER=postgres" >> $GITHUB_ENV
+          echo "POSTGRES_PASSWORD=postgre" >> $GITHUB_ENV
+
     - name: Build with Maven
       run: mvn package
     - name: Run All Test
